--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -6,6 +6,7 @@
     <welcome-file>listaPacientes.jsp</welcome-file>
     <welcome-file>cadastroUsuario.jsp</welcome-file>
     <welcome-file>inicio.jsp</welcome-file>
+    <welcome-file>registrarPaciente.jsp</welcome-file>
     
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
