--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -7,6 +7,7 @@
     <welcome-file>cadastroUsuario.jsp</welcome-file>
     <welcome-file>inicio.jsp</welcome-file>
     <welcome-file>registrarPaciente.jsp</welcome-file>
+    <welcome-file>listarProntuario.jsp</welcome-file>
     
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -57,5 +58,16 @@
   <servlet-mapping>
     <servlet-name>HomeController</servlet-name>
     <url-pattern>/HomeController</url-pattern>
+  </servlet-mapping>
+  
+   <servlet>
+    <description></description>
+    <display-name>ProntuarioController</display-name>
+    <servlet-name>ProntuarioController</servlet-name>
+    <servlet-class>controle.ProntuarioController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProntuarioController</servlet-name>
+    <url-pattern>/ProntuarioController</url-pattern>
   </servlet-mapping>
 </web-app>
